// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expression transformExpression complex expression 1`] = `
"(({
  x: {
    y: 1
  }
}))"
`;

exports[`expression transformExpression complex expression 2`] = `
"(({
  a: 1
}))"
`;
